--- a/results/accessors-battle-of-the-mooses.html
+++ b/results/accessors-battle-of-the-mooses.html
@@ -25,6 +25,21 @@
       "Moo.set/nothreads"
    ],
    [
+      "5.8.9",
+      null,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null,
+      2.68,
+      2.25,
+      3.05,
+      2.62
+   ],
+   [
       "5.10.0",
       null,
       null,
@@ -50,9 +65,9 @@
       null,
       null,
       2,
-      2.05,
-      2.42,
-      2.31
+      2.08,
+      2.43,
+      2.34
    ],
    [
       "5.12.0",
@@ -64,10 +79,10 @@
       5.51,
       null,
       7.34,
-      1.98,
-      2.09,
+      1.97,
+      2.08,
       2.47,
-      2.28
+      2.26
    ],
    [
       "5.13.0",
@@ -81,8 +96,8 @@
       null,
       2.1,
       1.96,
-      2.26,
-      2.23
+      2.25,
+      2.21
    ],
    [
       "5.13.1",
@@ -94,9 +109,9 @@
       5.42,
       7.66,
       7.3,
-      2.05,
+      2.03,
       1.92,
-      2.4,
+      2.41,
       2.19
    ],
    [
@@ -110,9 +125,9 @@
       8.59,
       7.58,
       null,
-      1.99,
+      2.01,
       null,
-      2.2
+      2.18
    ],
    [
       "5.13.3",
@@ -125,9 +140,9 @@
       null,
       7.78,
       null,
-      2.06,
+      2.12,
       null,
-      2.27
+      2.28
    ],
    [
       "5.13.4",
@@ -140,9 +155,9 @@
       null,
       7.39,
       null,
-      1.97,
+      1.95,
       null,
-      2.21
+      2.22
    ],
    [
       "5.13.5",
@@ -155,7 +170,7 @@
       null,
       7.03,
       null,
-      1.92,
+      1.91,
       null,
       2.23
    ],
@@ -170,9 +185,9 @@
       null,
       null,
       null,
-      2.02,
+      2,
       null,
-      2.39
+      2.38
    ],
    [
       "5.13.7",
@@ -187,7 +202,7 @@
       null,
       1.98,
       null,
-      2.22
+      2.24
    ],
    [
       "5.13.8",
@@ -200,9 +215,9 @@
       null,
       8.25,
       null,
-      2.02,
+      2.06,
       null,
-      2.3
+      2.31
    ],
    [
       "5.13.9",
@@ -217,7 +232,7 @@
       null,
       1.97,
       null,
-      2.32
+      2.34
    ],
    [
       "5.13.10",
@@ -229,10 +244,10 @@
       null,
       null,
       null,
-      1.93,
-      1.98,
-      2.33,
-      2.38
+      1.92,
+      1.96,
+      2.34,
+      2.35
    ],
    [
       "5.14.0",
