--- a/results/accessors-battle-of-the-raptors.html
+++ b/results/accessors-battle-of-the-raptors.html
@@ -29,6 +29,25 @@
       "Moo.set/nothreads"
    ],
    [
+      "5.8.9",
+      null,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null,
+      null,
+      2.68,
+      2.25,
+      3.05,
+      2.62
+   ],
+   [
       "5.10.0",
       1.63,
       null,
@@ -62,9 +81,9 @@
       2.8,
       2.52,
       2,
-      2.05,
-      2.42,
-      2.31
+      2.08,
+      2.43,
+      2.34
    ],
    [
       "5.12.0",
@@ -80,10 +99,10 @@
       2.02,
       2.58,
       2.43,
-      1.98,
-      2.09,
+      1.97,
+      2.08,
       2.47,
-      2.28
+      2.26
    ],
    [
       "5.13.0",
@@ -101,8 +120,8 @@
       2.48,
       2.1,
       1.96,
-      2.26,
-      2.23
+      2.25,
+      2.21
    ],
    [
       "5.13.1",
@@ -118,9 +137,9 @@
       2.12,
       2.79,
       2.33,
-      2.05,
+      2.03,
       1.92,
-      2.4,
+      2.41,
       2.19
    ],
    [
@@ -138,9 +157,9 @@
       null,
       2.43,
       null,
-      1.99,
+      2.01,
       null,
-      2.2
+      2.18
    ],
    [
       "5.13.3",
@@ -157,9 +176,9 @@
       null,
       2.29,
       null,
-      2.06,
+      2.12,
       null,
-      2.27
+      2.28
    ],
    [
       "5.13.4",
@@ -176,9 +195,9 @@
       null,
       2.37,
       null,
-      1.97,
+      1.95,
       null,
-      2.21
+      2.22
    ],
    [
       "5.13.5",
@@ -195,7 +214,7 @@
       null,
       2.27,
       null,
-      1.92,
+      1.91,
       null,
       2.23
    ],
@@ -214,9 +233,9 @@
       null,
       null,
       null,
-      2.02,
+      2,
       null,
-      2.39
+      2.38
    ],
    [
       "5.13.7",
@@ -235,7 +254,7 @@
       null,
       1.98,
       null,
-      2.22
+      2.24
    ],
    [
       "5.13.8",
@@ -252,9 +271,9 @@
       null,
       2.35,
       null,
-      2.02,
+      2.06,
       null,
-      2.3
+      2.31
    ],
    [
       "5.13.9",
@@ -273,7 +292,7 @@
       null,
       1.97,
       null,
-      2.32
+      2.34
    ],
    [
       "5.13.10",
@@ -289,10 +308,10 @@
       2.16,
       2.39,
       2.31,
-      1.93,
-      1.98,
-      2.33,
-      2.38
+      1.92,
+      1.96,
+      2.34,
+      2.35
    ],
    [
       "5.14.0",
