--- a/results/shootout-binarytrees.html
+++ b/results/shootout-binarytrees.html
@@ -15,264 +15,339 @@
       "binarytrees/nothreads"
    ],
    [
+      "5.8.9",
+      121.53,
+      115.92
+   ],
+   [
+      "5.10.0",
+      106.02,
+      null
+   ],
+   [
       "5.10.1",
-      104.41,
-      97.2
+      104.89,
+      97.64
+   ],
+   [
+      "5.12.0",
+      104.96,
+      100.2
    ],
    [
       "5.13.0",
-      103.26,
-      97.15
+      104.8,
+      99.79
    ],
    [
       "5.13.1",
-      100.92,
-      98.05
+      102.78,
+      98.99
    ],
    [
       "5.13.2",
-      101.75,
-      96.1
+      102.88,
+      97.58
    ],
    [
       "5.13.3",
-      100.62,
-      97.45
+      101.43,
+      98.32
    ],
    [
       "5.13.4",
-      102.81,
-      96.78
+      104.83,
+      98.68
    ],
    [
       "5.13.5",
-      103.02,
-      97.4
+      104.37,
+      98.59
    ],
    [
       "5.13.6",
-      102.32,
-      99.11
+      103.16,
+      101.65
    ],
    [
       "5.13.7",
-      100.16,
-      97.75
+      102.21,
+      99.37
    ],
    [
       "5.13.8",
-      100.46,
-      97.41
+      102.22,
+      99.51
    ],
    [
       "5.13.9",
-      100.68,
-      97.1
+      101.39,
+      99.33
    ],
    [
       "5.13.10",
-      102.36,
-      98.66
+      103.9,
+      99.51
+   ],
+   [
+      "5.14.0",
+      101.23,
+      98.73
+   ],
+   [
+      "5.14.4",
+      105,
+      104.19
+   ],
+   [
+      "5.15.0",
+      null,
+      100.84
    ],
    [
       "5.15.1",
-      99.73,
-      99.8
+      100.26,
+      100.59
    ],
    [
       "5.15.2",
-      99.57,
-      94.96
+      100.89,
+      97.05
    ],
    [
       "5.15.3",
-      101.83,
-      96.4
+      103.36,
+      98.6
    ],
    [
       "5.15.4",
-      103.16,
-      95.18
+      104.3,
+      96.4
    ],
    [
       "5.15.5",
-      101.04,
-      95.69
+      101.8,
+      96.82
    ],
    [
       "5.15.6",
-      102.39,
-      96.97
+      103.11,
+      98.71
    ],
    [
       "5.15.7",
-      102.83,
-      100.24
+      103.96,
+      99.44
    ],
    [
       "5.15.8",
-      102.76,
-      96.93
+      105.53,
+      98.85
    ],
    [
       "5.15.9",
-      103.8,
-      98.58
+      105.77,
+      100.58
+   ],
+   [
+      "5.16.0",
+      103.36,
+      98.05
+   ],
+   [
+      "5.16.3",
+      104.37,
+      100.63
    ],
    [
       "5.17.0",
-      100.66,
-      96.93
+      102.05,
+      97.82
    ],
    [
       "5.17.1",
-      103.97,
-      94.9
+      104.38,
+      97.61
    ],
    [
       "5.17.2",
-      102.26,
-      96.62
+      102.47,
+      96.85
    ],
    [
       "5.17.3",
-      103.13,
-      96.96
+      103.31,
+      97.87
    ],
    [
       "5.17.4",
-      103.22,
-      96.21
+      103.16,
+      96.93
    ],
    [
       "5.17.5",
-      103.43,
-      96.53
+      103.08,
+      97.05
    ],
    [
       "5.17.6",
-      100.57,
-      93.92
+      100.25,
+      93.58
    ],
    [
       "5.17.7",
-      101.82,
-      95.92
+      102.13,
+      96.29
    ],
    [
       "5.17.8",
-      103.31,
-      96.54
+      102.96,
+      97.66
    ],
    [
       "5.17.9",
-      101.54,
-      95.11
+      100.83,
+      95.3
+   ],
+   [
+      "5.18.0",
+      102.03,
+      98.6
+   ],
+   [
+      "5.18.4",
+      101.37,
+      96.21
    ],
    [
       "5.19.0",
-      102.94,
-      96.38
+      103.33,
+      97.25
    ],
    [
       "5.19.1",
-      99.73,
-      95.43
+      100.41,
+      96.42
    ],
    [
       "5.19.2",
-      102.1,
-      94.81
+      102.58,
+      95.31
    ],
    [
       "5.19.3",
-      100.64,
-      96.84
+      100.73,
+      97.31
    ],
    [
       "5.19.4",
-      107.15,
-      94.18
+      105.8,
+      94.82
    ],
    [
       "5.19.5",
-      100.18,
-      93.38
+      100.63,
+      93.78
    ],
    [
       "5.19.6",
-      103.11,
-      94.88
+      103.54,
+      95.51
    ],
    [
       "5.19.7",
-      101.98,
-      98.34
+      102.27,
+      97.13
    ],
    [
       "5.19.8",
-      100.02,
-      95.63
+      100.1,
+      96.14
    ],
    [
       "5.19.9",
-      100.37,
-      94.05
+      99.6,
+      95.35
    ],
    [
       "5.19.10",
-      98.06,
-      93.8
+      97.95,
+      94.67
    ],
    [
       "5.19.11",
-      99.75,
-      92.42
+      99.89,
+      92.68
+   ],
+   [
+      "5.20.0",
+      101.84,
+      93.39
+   ],
+   [
+      "5.20.2",
+      100.27,
+      94.41
    ],
    [
       "5.21.0",
-      102.23,
-      93.26
+      102.09,
+      93.32
    ],
    [
       "5.21.1",
-      99.17,
-      93.74
+      98.91,
+      93.73
    ],
    [
       "5.21.2",
-      99.83,
-      93.01
+      100.07,
+      93.81
    ],
    [
       "5.21.3",
-      99.9,
-      96.16
+      100.09,
+      96.22
    ],
    [
       "5.21.4",
-      99.82,
-      94.55
+      99.94,
+      96.11
    ],
    [
       "5.21.5",
-      97.04,
-      97.19
+      97.24,
+      97.64
+   ],
+   [
+      "5.21.6",
+      98.93,
+      98.63
+   ],
+   [
+      "5.21.7",
+      90.4,
+      87.81
+   ],
+   [
+      "5.21.8",
+      93,
+      88.82
    ],
    [
       "5.22.0",
-      91.58,
-      86.86
+      91.81,
+      87.3
    ],
    [
       "5.23.0",
-      91.33,
-      87.77
+      91.81,
+      88.2
    ],
    [
       "5.23.1",
-      89.36,
-      87.38
+      89.85,
+      88.56
    ]
 ]
 );
