--- a/results/shootout-nbody.html
+++ b/results/shootout-nbody.html
@@ -15,264 +15,339 @@
       "nbody/nothreads"
    ],
    [
-      "5.10.1",
-      31.88,
-      31.06
+      "5.8.9",
+      32.44,
+      29.15
    ],
    [
-      "5.13.0",
-      32.43,
+      "5.10.0",
+      31.94,
+      null
+   ],
+   [
+      "5.10.1",
+      31.64,
       30.5
    ],
    [
+      "5.12.0",
+      31.62,
+      30.85
+   ],
+   [
+      "5.13.0",
+      31.44,
+      30.06
+   ],
+   [
       "5.13.1",
-      32.58,
-      31.16
+      31.5,
+      29.49
    ],
    [
       "5.13.2",
-      30.47,
-      28.82
+      29.69,
+      28.18
    ],
    [
       "5.13.3",
-      31.85,
-      29.29
+      30.23,
+      28.18
    ],
    [
       "5.13.4",
-      32.21,
-      28.51
+      31.2,
+      27.75
    ],
    [
       "5.13.5",
-      30.78,
-      28.77
+      29.87,
+      27.41
    ],
    [
       "5.13.6",
-      30.37,
-      28.41
+      30.16,
+      27.8
    ],
    [
       "5.13.7",
-      30.08,
-      28.9
+      28.99,
+      27.35
    ],
    [
       "5.13.8",
-      30.33,
-      27.74
+      29.45,
+      27.39
    ],
    [
       "5.13.9",
-      30.81,
-      28.49
+      29.53,
+      27.5
    ],
    [
       "5.13.10",
-      29.65,
-      28.55
+      28.86,
+      27.81
    ],
    [
-      "5.15.1",
-      30.7,
-      28.82
+      "5.14.0",
+      29.66,
+      27.61
    ],
    [
-      "5.15.2",
-      30.4,
-      28.09
+      "5.14.4",
+      29.62,
+      29.68
    ],
    [
-      "5.15.3",
-      29.89,
-      28.98
-   ],
-   [
-      "5.15.4",
-      29.85,
-      28.48
-   ],
-   [
-      "5.15.5",
-      29.65,
-      28.44
-   ],
-   [
-      "5.15.6",
-      30.22,
-      28.78
-   ],
-   [
-      "5.15.7",
-      30.45,
-      28.48
-   ],
-   [
-      "5.15.8",
-      29.67,
-      29.29
-   ],
-   [
-      "5.15.9",
-      29.1,
-      28.35
-   ],
-   [
-      "5.17.0",
-      30.79,
-      28.51
-   ],
-   [
-      "5.17.1",
-      30.53,
-      29.98
-   ],
-   [
-      "5.17.2",
-      30.86,
-      28.94
-   ],
-   [
-      "5.17.3",
-      30.28,
-      29.86
-   ],
-   [
-      "5.17.4",
-      28.53,
-      27.89
-   ],
-   [
-      "5.17.5",
-      29.79,
+      "5.15.0",
+      null,
       28.39
    ],
    [
-      "5.17.6",
-      30.83,
-      28.27
+      "5.15.1",
+      29.55,
+      28.2
    ],
    [
-      "5.17.7",
-      29.78,
-      29.18
+      "5.15.2",
+      29.99,
+      27.26
    ],
    [
-      "5.17.8",
-      30,
-      28.21
+      "5.15.3",
+      29.41,
+      28.19
    ],
    [
-      "5.17.9",
-      30.54,
-      29.28
+      "5.15.4",
+      29.08,
+      27.32
    ],
    [
-      "5.19.0",
-      30.28,
-      28.59
+      "5.15.5",
+      29.6,
+      28.51
    ],
    [
-      "5.19.1",
-      29.61,
-      30.12
-   ],
-   [
-      "5.19.2",
-      30.22,
-      28.36
-   ],
-   [
-      "5.19.3",
-      30.24,
-      28.45
-   ],
-   [
-      "5.19.4",
-      30.14,
-      27.9
-   ],
-   [
-      "5.19.5",
-      30.28,
-      28.12
-   ],
-   [
-      "5.19.6",
-      30.48,
-      28.01
-   ],
-   [
-      "5.19.7",
-      30.04,
-      29.47
-   ],
-   [
-      "5.19.8",
-      29.63,
-      28.23
-   ],
-   [
-      "5.19.9",
+      "5.15.6",
       29.5,
-      28.93
+      27.73
    ],
    [
-      "5.19.10",
-      29.49,
-      28.79
-   ],
-   [
-      "5.19.11",
-      29.9,
-      28.14
-   ],
-   [
-      "5.21.0",
-      30.74,
+      "5.15.7",
+      29.29,
       28.02
    ],
    [
-      "5.21.1",
-      30.79,
-      27.36
+      "5.15.8",
+      29.15,
+      29.44
    ],
    [
-      "5.21.2",
-      30.31,
+      "5.15.9",
+      29.08,
+      28.25
+   ],
+   [
+      "5.16.0",
+      29.3,
+      28.03
+   ],
+   [
+      "5.16.3",
+      28.71,
+      27.69
+   ],
+   [
+      "5.17.0",
+      30.42,
+      27.68
+   ],
+   [
+      "5.17.1",
+      29.5,
+      29.67
+   ],
+   [
+      "5.17.2",
+      29.94,
+      29.14
+   ],
+   [
+      "5.17.3",
+      29.76,
+      30.42
+   ],
+   [
+      "5.17.4",
+      28.33,
+      27.07
+   ],
+   [
+      "5.17.5",
+      28.85,
+      27.52
+   ],
+   [
+      "5.17.6",
+      29.75,
+      28.02
+   ],
+   [
+      "5.17.7",
+      29.32,
+      29.57
+   ],
+   [
+      "5.17.8",
+      29.53,
+      28.78
+   ],
+   [
+      "5.17.9",
+      29.9,
+      29.42
+   ],
+   [
+      "5.18.0",
+      29.7,
       27.7
    ],
    [
+      "5.18.4",
+      29.67,
+      28.53
+   ],
+   [
+      "5.19.0",
+      29.79,
+      27.95
+   ],
+   [
+      "5.19.1",
+      29.5,
+      28.32
+   ],
+   [
+      "5.19.2",
+      28.63,
+      27.57
+   ],
+   [
+      "5.19.3",
+      29.77,
+      29.27
+   ],
+   [
+      "5.19.4",
+      29.12,
+      27.45
+   ],
+   [
+      "5.19.5",
+      29.26,
+      27.51
+   ],
+   [
+      "5.19.6",
+      29.53,
+      28.18
+   ],
+   [
+      "5.19.7",
+      28.81,
+      27.83
+   ],
+   [
+      "5.19.8",
+      28.66,
+      27.6
+   ],
+   [
+      "5.19.9",
+      28.72,
+      27.92
+   ],
+   [
+      "5.19.10",
+      28.83,
+      27.65
+   ],
+   [
+      "5.19.11",
+      28.98,
+      27.24
+   ],
+   [
+      "5.20.0",
+      29.55,
+      27.74
+   ],
+   [
+      "5.20.2",
+      29.07,
+      27.47
+   ],
+   [
+      "5.21.0",
+      29.76,
+      27.74
+   ],
+   [
+      "5.21.1",
+      30.29,
+      27.2
+   ],
+   [
+      "5.21.2",
+      29.41,
+      27.16
+   ],
+   [
       "5.21.3",
-      30.27,
-      28.11
+      29.32,
+      27.43
    ],
    [
       "5.21.4",
-      29.77,
-      28.55
+      29.08,
+      27.25
    ],
    [
       "5.21.5",
-      34.32,
-      32.47
+      33.85,
+      31.92
+   ],
+   [
+      "5.21.6",
+      29.45,
+      27.47
+   ],
+   [
+      "5.21.7",
+      25.47,
+      23.79
+   ],
+   [
+      "5.21.8",
+      25.54,
+      24.16
    ],
    [
       "5.22.0",
-      26.83,
-      25.36
+      26.54,
+      24.8
    ],
    [
       "5.23.0",
-      26.2,
-      25.29
+      26.03,
+      24.94
    ],
    [
       "5.23.1",
-      27.01,
-      25.44
+      25.87,
+      25.29
    ]
 ]
 );
