--- a/results/shootout-spectralnorm.html
+++ b/results/shootout-spectralnorm.html
@@ -15,264 +15,339 @@
       "spectralnorm/nothreads"
    ],
    [
+      "5.8.9",
+      21.14,
+      19.16
+   ],
+   [
+      "5.10.0",
+      19.39,
+      null
+   ],
+   [
       "5.10.1",
-      26.06,
-      24.7
+      23.43,
+      21.71
+   ],
+   [
+      "5.12.0",
+      21.05,
+      18.14
    ],
    [
       "5.13.0",
-      25.48,
-      23.71
+      19.47,
+      18.12
    ],
    [
       "5.13.1",
-      26.56,
-      23.83
+      20.74,
+      17.81
    ],
    [
       "5.13.2",
-      24.99,
-      23.71
+      19.41,
+      19.08
    ],
    [
       "5.13.3",
-      25.08,
-      23.72
+      18.86,
+      18.32
    ],
    [
       "5.13.4",
-      25.15,
-      23.3
+      18.92,
+      17.93
    ],
    [
       "5.13.5",
-      24.7,
-      24.03
+      19.21,
+      18.41
    ],
    [
       "5.13.6",
-      27.22,
-      25.13
+      19.66,
+      18.25
    ],
    [
       "5.13.7",
-      26.49,
-      26.08
+      20.44,
+      18.49
    ],
    [
       "5.13.8",
-      27.31,
-      25.4
+      20.08,
+      18.43
    ],
    [
       "5.13.9",
-      27.47,
-      26.4
+      19.68,
+      19.74
    ],
    [
       "5.13.10",
-      26.74,
-      26.24
+      19.98,
+      18.74
+   ],
+   [
+      "5.14.0",
+      19,
+      17.9
+   ],
+   [
+      "5.14.4",
+      19.02,
+      18.83
+   ],
+   [
+      "5.15.0",
+      null,
+      18.7
    ],
    [
       "5.15.1",
-      27.54,
-      25.8
+      20.91,
+      17.76
    ],
    [
       "5.15.2",
-      27.6,
-      26.04
+      19.84,
+      18.28
    ],
    [
       "5.15.3",
-      27.69,
-      25.99
+      21.03,
+      18.13
    ],
    [
       "5.15.4",
-      28.88,
-      27.28
+      20.38,
+      20.25
    ],
    [
       "5.15.5",
-      28.48,
-      26.28
+      20.24,
+      18.66
    ],
    [
       "5.15.6",
-      27.55,
-      26.53
+      19.3,
+      19.67
    ],
    [
       "5.15.7",
-      27.61,
-      26.45
+      20.63,
+      17.99
    ],
    [
       "5.15.8",
-      27.61,
-      26.8
+      19.58,
+      18.56
    ],
    [
       "5.15.9",
-      27.83,
-      27.63
+      20.39,
+      19.5
+   ],
+   [
+      "5.16.0",
+      19.25,
+      19.15
+   ],
+   [
+      "5.16.3",
+      20.09,
+      17.85
    ],
    [
       "5.17.0",
-      27.17,
-      27.48
+      19.76,
+      20.99
    ],
    [
       "5.17.1",
-      27.74,
-      29.32
+      21.34,
+      20.83
    ],
    [
       "5.17.2",
-      27.56,
-      27.04
+      19.49,
+      18.99
    ],
    [
       "5.17.3",
-      27.2,
-      28.34
+      19.31,
+      20.4
    ],
    [
       "5.17.4",
-      27.52,
-      27.4
+      20.71,
+      20.72
    ],
    [
       "5.17.5",
-      28.23,
-      26.32
+      21.25,
+      18.43
    ],
    [
       "5.17.6",
-      27.79,
-      27.08
+      19.32,
+      19.07
    ],
    [
       "5.17.7",
-      27.35,
-      27.7
+      19.09,
+      20.01
    ],
    [
       "5.17.8",
-      27.59,
-      29.01
+      19.32,
+      20.81
    ],
    [
       "5.17.9",
-      27.33,
-      27.04
+      19.29,
+      18.94
+   ],
+   [
+      "5.18.0",
+      18.98,
+      20.86
+   ],
+   [
+      "5.18.4",
+      19.41,
+      19.7
    ],
    [
       "5.19.0",
-      27.88,
-      27.87
+      21.12,
+      20.66
    ],
    [
       "5.19.1",
-      28.94,
-      26.46
+      20.78,
+      18.48
    ],
    [
       "5.19.2",
-      28.23,
-      26.59
+      19.89,
+      19.12
    ],
    [
       "5.19.3",
-      29.38,
-      27.85
+      21.81,
+      20.13
    ],
    [
       "5.19.4",
-      27.35,
-      28.26
+      19.36,
+      21.54
    ],
    [
       "5.19.5",
-      27.85,
-      27.29
+      19.99,
+      19.71
    ],
    [
       "5.19.6",
-      27.96,
-      27.33
+      19.49,
+      20.85
    ],
    [
       "5.19.7",
-      27.92,
-      29.11
+      19.26,
+      21.86
    ],
    [
       "5.19.8",
-      28.35,
-      28.07
+      20.47,
+      20.65
    ],
    [
       "5.19.9",
-      27.66,
-      26.38
+      20.5,
+      19.73
    ],
    [
       "5.19.10",
-      27.41,
-      25.96
+      20.27,
+      17.41
    ],
    [
       "5.19.11",
-      27.02,
-      26.26
+      18.64,
+      19.19
+   ],
+   [
+      "5.20.0",
+      18.33,
+      19.54
+   ],
+   [
+      "5.20.2",
+      18.73,
+      18.69
    ],
    [
       "5.21.0",
-      27.52,
-      26.72
+      18.74,
+      20.11
    ],
    [
       "5.21.1",
-      28.85,
-      26.52
+      20.29,
+      18.84
    ],
    [
       "5.21.2",
-      27.4,
-      27.16
+      19.94,
+      19.45
    ],
    [
       "5.21.3",
-      28.23,
-      27.74
+      19.83,
+      20.93
    ],
    [
       "5.21.4",
-      28.47,
-      27.25
+      20.64,
+      19.13
    ],
    [
       "5.21.5",
-      28.89,
-      28.18
+      20.73,
+      22.04
+   ],
+   [
+      "5.21.6",
+      19.72,
+      19.41
+   ],
+   [
+      "5.21.7",
+      17.61,
+      18.67
+   ],
+   [
+      "5.21.8",
+      17.75,
+      17.41
    ],
    [
       "5.22.0",
-      27.36,
-      26.1
+      23.77,
+      22.01
    ],
    [
       "5.23.0",
-      27,
-      25.6
+      19.94,
+      18.42
    ],
    [
       "5.23.1",
-      26.65,
-      27.09
+      18.32,
+      18.56
    ]
 ]
 );
